Fixed tutorial screen
Made a smaller tutorial screen image to avoid scrollbars.

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
     font-size: 22px;
 }
 
+img {
+  width: 50vw;
+}
+
 #start-button {
     font-size: 24px; 
     padding: 12px 24px; 
